# cmake-101

./: CMakeLists.txt  readme.md
src/: foo.cpp  foo.h  lib.cpp  lib.h  main.cpp
